--- a/main.css
+++ b/main.css
@@ -53,3 +53,13 @@ body {
         text-align: left;
     }
 }
+
+#btn {
+    background: red;
+    color: white;
+    border: none;
+    border-radius: 100%;
+    width: 200px;
+    height: 200px;
+    font-size: 60px;
+}
