--- a/main.css
+++ b/main.css
@@ -33,7 +33,10 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
+    .topnav a:not(:first-child) {
+        display: none;
+    }
+
     .topnav a.icon {
         float: right;
         display: block;
@@ -41,12 +44,16 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
+    .topnav.responsive {
+        position: relative;
+    }
+
     .topnav.responsive .icon {
         position: absolute;
         right: 0;
         top: 0;
     }
+
     .topnav.responsive a {
         float: none;
         display: block;
@@ -57,9 +64,21 @@ body {
 #btn {
     background: red;
     color: white;
-    border: none;
+    border: 2px solid black;
+    box-shadow: 0px 10px darkred;
     border-radius: 100%;
     width: 200px;
     height: 200px;
     font-size: 60px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+form {
+    border: 2px solid lightblue;
+    border-radius: 10px;
 }
