--- a/main.css
+++ b/main.css
@@ -41,6 +41,14 @@ body {
         float: right;
         display: block;
     }
+
+    .content {
+        width: 80% !important;
+    }
+
+    form {
+        padding: 10px 10%;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -59,27 +67,46 @@ body {
         display: block;
         text-align: left;
     }
+
 }
 
-#btn {
+#bigBtn {
     background: red;
     color: white;
     border: 2px solid black;
-    box-shadow: 0px 10px darkred;
+    box-shadow: 0 10px darkred;
     border-radius: 100%;
     width: 200px;
     height: 200px;
     font-size: 60px;
 }
 
+button
+{
+    background-color: lightgreen;
+    border: 0 solid black;
+    border-radius: 5px;
+    width: 100%;
+    height: 25px;
+}
+
 .content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 500px;
+    margin: auto;
+    margin-top: 10px;
 }
 
 form {
     border: 2px solid lightblue;
     border-radius: 10px;
-    
+    width: 100%;
+    padding: 10px 10% 20px 10%;
+}
+
+form > *
+{
+    width: 100%;
 }
