added author, version and created/version edit date

--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
+/**
+ * Version 1.0
+ * Created by Adrian Aeschlimann on 18.09.2018
+ *
+ * Version 1.1
+ * Edited by Adrian Aeschlimann on 27.11.2018
+ */
+
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
